--- a/output/index.html
+++ b/output/index.html
@@ -3,15 +3,14 @@
 <head>
         <meta charset="utf-8" />
         <title>K Dublin Photography</title>
-        <link rel="stylesheet" href="https://kdublin.com/theme/css/main.css" />
-        <link rel="stylesheet" href="https://kdublin.com/static/css/custom.css" />
-        <link href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="K Dublin Photography Atom Feed" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-	<script src="https://kdublin.com/theme/js/mousetrap.js"> </script>
+	<script src="./theme/js/mousetrap.js"> </script>
 </head>
 
 <body id="index" class="home">
@@ -28,15 +27,15 @@ function greyon(img)
 </script>
 
         <header id="banner" class="body">
-                <h1><a href="https://kdublin.com/">K Dublin Photography </a></h1>
+                <h1><a href="./">K Dublin Photography </a></h1>
                 <nav><ul>
-                    <li><a href="https://kdublin.com/about/">About</a></li>
-                    <li><a href="https://kdublin.com/folio/category/event.html">Event</a></li>
-                    <li><a href="https://kdublin.com/folio/category/inflation.html">Inflation</a></li>
-                    <li><a href="https://kdublin.com/folio/category/landscape.html">Landscape</a></li>
-                    <li><a href="https://kdublin.com/folio/category/lifestyle.html">Lifestyle</a></li>
-                    <li><a href="https://kdublin.com/folio/category/nature.html">Nature</a></li>
-                    <li><a href="https://kdublin.com/folio/category/portrait.html">Portrait</a></li>
+                    <li><a href="./about/">About</a></li>
+                    <li><a href="./folio/category/event.html">Event</a></li>
+                    <li><a href="./folio/category/inflation.html">Inflation</a></li>
+                    <li><a href="./folio/category/landscape.html">Landscape</a></li>
+                    <li><a href="./folio/category/lifestyle.html">Lifestyle</a></li>
+                    <li><a href="./folio/category/nature.html">Nature</a></li>
+                    <li><a href="./folio/category/portrait.html">Portrait</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -44,76 +43,75 @@ function greyon(img)
 
 
 	<div style="">
-		<a href="https://kdublin.com/folio/adrienne-oliver.html">
+		<a href="./folio/adrienne-oliver.html">
 		<img src="/static/images/adrienne-oliver.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Author Adrienne Oliver" alt="Black Gold Storytellers Photo" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/adrienne-oliver-2.html">
+		<a href="./folio/adrienne-oliver-2.html">
 		<img src="/static/images/adrienne-oliver-2.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Author Adrienne Oliver Joy" alt="Black Gold Storytellers Photo" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/slack-office.html">
+		<a href="./folio/slack-office.html">
 		<img src="/static/images/slack-office.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Slack Office" alt="View of Slack Office from Salesforce Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/shadow-of-purple-flowers.html">
+		<a href="./folio/shadow-of-purple-flowers.html">
 		<img src="/static/images/shadow-of-purple-flowers.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Shadow of Purple Flowers" alt="Purple Flowers in Salesforce Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap1.html">
+		<a href="./folio/book-swap1.html">
 		<img src="/static/images/book-swap1.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Venue" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap2.html">
+		<a href="./folio/book-swap2.html">
 		<img src="/static/images/book-swap2.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Books" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap3.html">
+		<a href="./folio/book-swap3.html">
 		<img src="/static/images/book-swap3.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Portrait" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap4.html">
+		<a href="./folio/book-swap4.html">
 		<img src="/static/images/book-swap4.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Share" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap5.html">
+		<a href="./folio/book-swap5.html">
 		<img src="/static/images/book-swap5.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Wheel" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap6.html">
+		<a href="./folio/book-swap6.html">
 		<img src="/static/images/book-swap6.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Before S'More" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap7.html">
+		<a href="./folio/book-swap7.html">
 		<img src="/static/images/book-swap7.jpg" class="bw" id="ima11" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: Silent Auction" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/book-swap8.html">
+		<a href="./folio/book-swap8.html">
 		<img src="/static/images/book-swap8.jpg" class="bw" id="ima12" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="826 Valencia Book Swap: After S'More" alt="826 Valencia Book Swap at El Rio" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
     Page 1 / 5
-        <a href="https://kdublin.com/index2.html">&raquo;</a>
-        <a href="https://kdublin.com/index5.html">&#8649;</a>
+        <a href="./index2.html">&raquo;</a>
+        <a href="./index5.html">&#8649;</a>
 </p>
                 </section><!-- /#content -->
     </aside><!-- /#featured -->
         <section id="extras" class="body">
                 <div class="social">
                         <ul>
-                            <li><a href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.instagram.com/kdublinphoto/">instagram</a></li>
                             <li><a href="https://www.twitter.com/parteverything">twitter</a></li>
