--- a/output/index2.html
+++ b/output/index2.html
@@ -3,15 +3,14 @@
 <head>
         <meta charset="utf-8" />
         <title>K Dublin Photography</title>
-        <link rel="stylesheet" href="https://kdublin.com/theme/css/main.css" />
-        <link rel="stylesheet" href="https://kdublin.com/static/css/custom.css" />
-        <link href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="K Dublin Photography Atom Feed" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-	<script src="https://kdublin.com/theme/js/mousetrap.js"> </script>
+	<script src="./theme/js/mousetrap.js"> </script>
 </head>
 
 <body id="index" class="home">
@@ -28,15 +27,15 @@ function greyon(img)
 </script>
 
         <header id="banner" class="body">
-                <h1><a href="https://kdublin.com/">K Dublin Photography </a></h1>
+                <h1><a href="./">K Dublin Photography </a></h1>
                 <nav><ul>
-                    <li><a href="https://kdublin.com/about/">About</a></li>
-                    <li><a href="https://kdublin.com/folio/category/event.html">Event</a></li>
-                    <li><a href="https://kdublin.com/folio/category/inflation.html">Inflation</a></li>
-                    <li><a href="https://kdublin.com/folio/category/landscape.html">Landscape</a></li>
-                    <li><a href="https://kdublin.com/folio/category/lifestyle.html">Lifestyle</a></li>
-                    <li><a href="https://kdublin.com/folio/category/nature.html">Nature</a></li>
-                    <li><a href="https://kdublin.com/folio/category/portrait.html">Portrait</a></li>
+                    <li><a href="./about/">About</a></li>
+                    <li><a href="./folio/category/event.html">Event</a></li>
+                    <li><a href="./folio/category/inflation.html">Inflation</a></li>
+                    <li><a href="./folio/category/landscape.html">Landscape</a></li>
+                    <li><a href="./folio/category/lifestyle.html">Lifestyle</a></li>
+                    <li><a href="./folio/category/nature.html">Nature</a></li>
+                    <li><a href="./folio/category/portrait.html">Portrait</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -44,78 +43,77 @@ function greyon(img)
 
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-american-buffalo.html">
+		<a href="./folio/desert-american-buffalo.html">
 		<img src="/static/images/desert-american-buffalo.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: American Buffalo" alt="Desert: American Buffalo" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-arch.html">
+		<a href="./folio/desert-arch.html">
 		<img src="/static/images/desert-arch.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Delicate Arch" alt="Desert: Delicate Arch" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-fiery-furnace.html">
+		<a href="./folio/desert-fiery-furnace.html">
 		<img src="/static/images/desert-fiery-furnace.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Fiery Furnace" alt="Desert: Fiery Furnace" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-heavenly-sky.html">
+		<a href="./folio/desert-heavenly-sky.html">
 		<img src="/static/images/desert-heavenly-sky.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Heavenly Sky" alt="Desert: Heavenly Sky" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-impression.html">
+		<a href="./folio/desert-impression.html">
 		<img src="/static/images/desert-impression.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Impression" alt="Desert: Impression" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-lizard.html">
+		<a href="./folio/desert-lizard.html">
 		<img src="/static/images/desert-lizard.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Lizard" alt="Desert: Lizard" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-moonrise.html">
+		<a href="./folio/desert-moonrise.html">
 		<img src="/static/images/desert-moonrise.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Moonrise" alt="Desert: Moonrise" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/desert-virga.html">
+		<a href="./folio/desert-virga.html">
 		<img src="/static/images/desert-virga.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Desert: Virga" alt="Desert: Virga" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/lost-highways1.html">
+		<a href="./folio/lost-highways1.html">
 		<img src="/static/images/lost-highways1.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lost Highways: Main Street DMV" alt="Lost Highways: Main Street DMV" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/lost-highways2.html">
+		<a href="./folio/lost-highways2.html">
 		<img src="/static/images/lost-highways2.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lost Highways: Main St. Opera House" alt="Lost Highways: Main St. Opera House" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/lost-highways3.html">
+		<a href="./folio/lost-highways3.html">
 		<img src="/static/images/lost-highways3.jpg" class="bw" id="ima11" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lost Highways: Rollin' Down" alt="Lost Highways: Rollin' Down" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/lost-highways4.html">
+		<a href="./folio/lost-highways4.html">
 		<img src="/static/images/lost-highways4.jpg" class="bw" id="ima12" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Lost Highways: Rene's Diner" alt="Lost Highways: Rene's Diner" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
-        <a href="https://kdublin.com/index.html">&#8647;</a>
-        <a href="https://kdublin.com/index.html">&laquo;</a>
+        <a href="./index.html">&#8647;</a>
+        <a href="./index.html">&laquo;</a>
     Page 2 / 5
-        <a href="https://kdublin.com/index3.html">&raquo;</a>
-        <a href="https://kdublin.com/index5.html">&#8649;</a>
+        <a href="./index3.html">&raquo;</a>
+        <a href="./index5.html">&#8649;</a>
 </p>
                 </section><!-- /#content -->
     </aside><!-- /#featured -->
         <section id="extras" class="body">
                 <div class="social">
                         <ul>
-                            <li><a href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.instagram.com/kdublinphoto/">instagram</a></li>
                             <li><a href="https://www.twitter.com/parteverything">twitter</a></li>
