--- a/output/index4.html
+++ b/output/index4.html
@@ -3,15 +3,14 @@
 <head>
         <meta charset="utf-8" />
         <title>K Dublin Photography</title>
-        <link rel="stylesheet" href="https://kdublin.com/theme/css/main.css" />
-        <link rel="stylesheet" href="https://kdublin.com/static/css/custom.css" />
-        <link href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="K Dublin Photography Atom Feed" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-	<script src="https://kdublin.com/theme/js/mousetrap.js"> </script>
+	<script src="./theme/js/mousetrap.js"> </script>
 </head>
 
 <body id="index" class="home">
@@ -28,15 +27,15 @@ function greyon(img)
 </script>
 
         <header id="banner" class="body">
-                <h1><a href="https://kdublin.com/">K Dublin Photography </a></h1>
+                <h1><a href="./">K Dublin Photography </a></h1>
                 <nav><ul>
-                    <li><a href="https://kdublin.com/about/">About</a></li>
-                    <li><a href="https://kdublin.com/folio/category/event.html">Event</a></li>
-                    <li><a href="https://kdublin.com/folio/category/inflation.html">Inflation</a></li>
-                    <li><a href="https://kdublin.com/folio/category/landscape.html">Landscape</a></li>
-                    <li><a href="https://kdublin.com/folio/category/lifestyle.html">Lifestyle</a></li>
-                    <li><a href="https://kdublin.com/folio/category/nature.html">Nature</a></li>
-                    <li><a href="https://kdublin.com/folio/category/portrait.html">Portrait</a></li>
+                    <li><a href="./about/">About</a></li>
+                    <li><a href="./folio/category/event.html">Event</a></li>
+                    <li><a href="./folio/category/inflation.html">Inflation</a></li>
+                    <li><a href="./folio/category/landscape.html">Landscape</a></li>
+                    <li><a href="./folio/category/lifestyle.html">Lifestyle</a></li>
+                    <li><a href="./folio/category/nature.html">Nature</a></li>
+                    <li><a href="./folio/category/portrait.html">Portrait</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -44,78 +43,77 @@ function greyon(img)
 
 
 	<div style="">
-		<a href="https://kdublin.com/folio/gg-love.html">
+		<a href="./folio/gg-love.html">
 		<img src="/static/images/gg-love.jpg" class="bw" id="ima1" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Golden Gate Love" alt="Beautiful Black couple shares tender moment at the Golden Gate Bridge Vista Point" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/gg-kiss.html">
+		<a href="./folio/gg-kiss.html">
 		<img src="/static/images/gg-kiss.jpg" class="bw" id="ima2" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Golden Gate Kiss" alt="" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/modern-cowboy.html">
+		<a href="./folio/modern-cowboy.html">
 		<img src="/static/images/modern-cowboy.jpg" class="bw" id="ima3" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Modern Cowboy" alt="Modern Cowboy in Glen Canyon" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/sunset-cigarette.html">
+		<a href="./folio/sunset-cigarette.html">
 		<img src="/static/images/sunset-cigarette.jpg" class="bw" id="ima4" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Sunset Cigarette" alt="Modern Cowboy in Glen Canyon having a cigarette in Glen Canyon" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/teacher-headshot.html">
+		<a href="./folio/teacher-headshot.html">
 		<img src="/static/images/teacher-headshot.jpg" class="bw" id="ima5" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Teacher Headshot" alt="Headshot of model in Glen Park neighborhood San Francisco" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/cute-pig.html">
+		<a href="./folio/cute-pig.html">
 		<img src="/static/images/cute-pig.jpg" class="bw" id="ima6" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Cute Pig" alt="Model next to Food Truck in San Francisco" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/day-ahead.html">
+		<a href="./folio/day-ahead.html">
 		<img src="/static/images/day-ahead.jpg" class="bw" id="ima7" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Day Ahead" alt="Model begins day in front of San Francisco Bay" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/first-shot.html">
+		<a href="./folio/first-shot.html">
 		<img src="/static/images/first-shot.jpg" class="bw" id="ima8" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="First Shot" alt="First Basketball Shot of Civil Twilight at McLaren Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/shot-and-awe.html">
+		<a href="./folio/shot-and-awe.html">
 		<img src="/static/images/shot-and-awe.jpg" class="bw" id="ima9" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Shot and Awe" alt="Three Points of Awe at McLaren Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/brick-friendship.html">
+		<a href="./folio/brick-friendship.html">
 		<img src="/static/images/brick-friendship.jpg" class="bw" id="ima10" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Brick Friendship" alt="photo of Friends in San Francisco South Beach in front of Brick wall" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/bay-friends.html">
+		<a href="./folio/bay-friends.html">
 		<img src="/static/images/bay-friends.jpg" class="bw" id="ima11" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Bay Friends" alt="photo of Friends at San Francisco Embarcadero overlooking Bay Bridge" style="height: 133px; object-fit: cover;" /></a>
 	</div>
 
 	<div style="">
-		<a href="https://kdublin.com/folio/birds-of-paradise.html">
+		<a href="./folio/birds-of-paradise.html">
 		<img src="/static/images/birds-of-paradise.jpg" class="bw" id="ima12" onmouseover="greyoff(this.id)" onmouseleave="greyon(this.id)" border="0" title="Birds of Paradise" alt="Birds of Paradise at Salesforce Park" style="height: 133px; object-fit: cover;" /></a>
 	</div>
                 </ol><!-- /#posts-list -->
                 <div style="clear:both"></div><p class="paginator">
-        <a href="https://kdublin.com/index.html">&#8647;</a>
-        <a href="https://kdublin.com/index3.html">&laquo;</a>
+        <a href="./index.html">&#8647;</a>
+        <a href="./index3.html">&laquo;</a>
     Page 4 / 5
-        <a href="https://kdublin.com/index5.html">&raquo;</a>
-        <a href="https://kdublin.com/index5.html">&#8649;</a>
+        <a href="./index5.html">&raquo;</a>
+        <a href="./index5.html">&#8649;</a>
 </p>
                 </section><!-- /#content -->
     </aside><!-- /#featured -->
         <section id="extras" class="body">
                 <div class="social">
                         <ul>
-                            <li><a href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.instagram.com/kdublinphoto/">instagram</a></li>
                             <li><a href="https://www.twitter.com/parteverything">twitter</a></li>
