--- a/output/tags.html
+++ b/output/tags.html
@@ -3,15 +3,14 @@
 <head>
         <meta charset="utf-8" />
         <title>K Dublin Photography - Tags</title>
-        <link rel="stylesheet" href="https://kdublin.com/theme/css/main.css" />
-        <link rel="stylesheet" href="https://kdublin.com/static/css/custom.css" />
-        <link href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="K Dublin Photography Atom Feed" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="./static/css/custom.css" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-	<script src="https://kdublin.com/theme/js/mousetrap.js"> </script>
+	<script src="./theme/js/mousetrap.js"> </script>
 </head>
 
 <body id="index" class="home">
@@ -28,15 +27,15 @@ function greyon(img)
 </script>
 
         <header id="banner" class="body">
-                <h1><a href="https://kdublin.com/">K Dublin Photography </a></h1>
+                <h1><a href="./">K Dublin Photography </a></h1>
                 <nav><ul>
-                    <li><a href="https://kdublin.com/about/">About</a></li>
-                    <li><a href="https://kdublin.com/folio/category/event.html">Event</a></li>
-                    <li><a href="https://kdublin.com/folio/category/inflation.html">Inflation</a></li>
-                    <li><a href="https://kdublin.com/folio/category/landscape.html">Landscape</a></li>
-                    <li><a href="https://kdublin.com/folio/category/lifestyle.html">Lifestyle</a></li>
-                    <li><a href="https://kdublin.com/folio/category/nature.html">Nature</a></li>
-                    <li><a href="https://kdublin.com/folio/category/portrait.html">Portrait</a></li>
+                    <li><a href="./about/">About</a></li>
+                    <li><a href="./folio/category/event.html">Event</a></li>
+                    <li><a href="./folio/category/inflation.html">Inflation</a></li>
+                    <li><a href="./folio/category/landscape.html">Landscape</a></li>
+                    <li><a href="./folio/category/lifestyle.html">Lifestyle</a></li>
+                    <li><a href="./folio/category/nature.html">Nature</a></li>
+                    <li><a href="./folio/category/portrait.html">Portrait</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -49,7 +48,6 @@ function greyon(img)
         <section id="extras" class="body">
                 <div class="social">
                         <ul>
-                            <li><a href="https://kdublin.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://www.instagram.com/kdublinphoto/">instagram</a></li>
                             <li><a href="https://www.twitter.com/parteverything">twitter</a></li>
